# zsql

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  Makefile  Makefile.am  README.md  args.c  args.h  configure.ac  errno.h  fuzzy_match.c  fuzzy_match.h  meta.h  migrate.c  migrate.h  sqlh.c  sqlh.h  utf8.c  utf8.h  z.1  z.c  zsql.1  zsql.c
.circleci/: config.yml
docs/: Makefile.am  z.1.in
m4/: Makefile.am  zsql_c_thread_local.m4
src/: Makefile.am  args.c  args.h  env.c  env.h  error.c  error.h  fuzzy_match.c  fuzzy_match.h  fuzzy_search.c  fuzzy_search.h  migrate.c  migrate.h  sqlh.c  sqlh.h  static_errors.c  static_errors.h  utf8.c  utf8.h  wtf8.c  wtf8.h  zsql.c
