bin_PROGRAMS = z
z_SOURCES = fuzzy_match.c fuzzy_match.h migrate.c migrate.h sqlh.c sqlh.h sqlite3.c sqlite3.h status.h utf8.c utf8.h zsql.c
AM_CFLAGS = -DSQLITE_DQS=0 -DSQLITE_THREADSAFE=0 -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_LIKE_DOESNT_MATCH_GLOBS -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_OMIT_PROGRESS_CALLBACK -DSQLITE_OMIT_SHARED_CACHE -DSQLITE_OMIT_AUTOINIT
